--- a/package.json
+++ b/package.json
@@ -18,8 +18,11 @@
     "react-bootstrap": "^2.0.0-rc.0",
     "react-dom": "^17.0.2",
     "react-draft-wysiwyg": "^1.14.7",
+    "react-icons": "^4.3.1",
     "react-router-dom": "^5.3.0",
     "react-scripts": "4.0.3",
+    "slate": "^0.66.5",
+    "slate-react": "^0.66.4",
     "web-vitals": "^1.1.2"
   },
   "scripts": {
@@ -39,5 +42,10 @@
       "last 1 firefox version",
       "last 1 safari version"
     ]
+  },
+  "devDependencies": {
+    "@editorjs/editorjs": "^2.22.2",
+    "@editorjs/paragraph": "^2.8.0",
+    "react-editor-js": "^1.10.0"
   }
 }
